--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-react-hw-03-image-finder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://https://Gene4kaS.github.io/goit-react-hw-03-image-finder",
+  "homepage": "https://Gene4kaS.github.io/goit-react-hw-03-image-finder",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
