--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "basiclightbox": "^5.0.4",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
+    "react-create-portal": "^0.4.2",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
     "react-scripts": "5.0.0",
